# pycharm-namespace-package-issue

./: README.md
namespace/: pyproject.toml
namespace-core/: .gitignore  pyproject.toml
namespace-core/src/namespace/core/: messages.py
namespace/src/namespace/: hello.py
