[tool.poetry]
name = "namespace-core"
version = "0.1.0"
description = ""
authors = ["Arun Babu Neelicattu <arun.neelicattu@gmail.com>"]
readme = "README.md"
packages = [{include = "namespace", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
